# robot_programming

./: .gitmodules
examples/cmake-first/: CMakeLists.txt  main.cpp
exercise01/mini_core/: CMakeLists.txt
exercise01/mini_core/executables/: CMakeLists.txt
exercise01/mini_core/src/: CMakeLists.txt
exercise02/exercise/: CMakeLists.txt
exercise02/exercise/src/btree/: btree.cpp  btree.h  btree_test.cpp
exercise02/exercise/src/linalg/: CMakeLists.txt  mat_f.cpp  mat_f.h  mat_f_test.cpp  vec_f.cpp  vec_f.h  vec_f_test.cpp
exercise03/: CMakeLists.txt
exercise03/01_binary_tree/: CMakeLists.txt  binary_tree_int.h  binary_tree_int_test.cpp  binary_tree_template.h  binary_tree_template_int_test.cpp  binary_tree_template_myitem_test.cpp  binary_tree_template_mys_test.cpp  binary_tree_template_no_using.h  binary_tree_template_no_using_test.cpp  binary_tree_template_test.cpp  default_compare.h
exercise03/02_mat_and_vec/: CMakeLists.txt  dynamic_mat_test.cpp  dynamic_mat_test_solution.cpp  mat_f.cpp  static_mat_test.cpp  static_mat_test_solution.cpp  static_vec.h  vec_f.cpp
exercise04-autodiff/: CMakeLists.txt  ad_test.cpp
exercise05-stl/src/: CMakeLists.txt  binary_tree_template.h  binary_tree_template_test.cpp  int_sort.cpp  point_multisort.cpp  point_multisort_gen_data.cpp  point_with_index.h  splitter.h  splitter_test.cpp
exercise05-stl/src/02_mat_and_vec/: CMakeLists.txt  static_mat.h  static_mat_test.cpp  static_vec.h  static_vec_test.cpp
exercise05-stl/test_data/: int_test_data.txt  point_multisort_data.txt
rp_06_eigen_templates/exercise/: CMakeLists.txt  eigen_01_point_loading.h  eigen_covariance.h  eigen_covariance_test.cpp  eigen_predicate.cpp  eigen_transform_sort.cpp
